components/policies-rd/base/konflux-rbac/limit-serviceaccount-token-expiration/.chainsaw-test/chainsaw-assert-policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: limit-serviceaccount-tokenrequest-expiration.konflux-ci.dev
status:
  observedGeneration: 1
  typeChecking: {}
