components/policies-rd/base/konflux-rbac/limit-serviceaccount-token-expiration/.chainsaw-test/test-outside-tenant/chainsaw-test.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: outside-tenant-allows-long-kubectl-create-token
spec:
  description: |
    In a namespace without the tenant label, kubectl create token with a long duration succeeds
    because the policy binding does not match.
  concurrent: false
  steps:
  - name: given-tokenrequest-validatingadmissionpolicy-is-installed
    try:
    - apply:
        file: ../../limit-serviceaccount-tokenrequest-expiration-validationadmissionpolicy.yaml
    - apply:
        file: ../../limit-serviceaccount-tokenrequest-expiration-validationadmissionpolicybinding.yaml
    - assert:
        file: ../chainsaw-assert-policy.yaml
    - sleep:
        # add a delay to make sure the APIServer successfully loaded the VAP
        # so to reduce test flakiness
        duration: 2s
  - name: given-serviceaccount-exists
    try:
    - apply:
        file: ../resources/serviceaccount.yaml
  - name: then-long-duration-token-request-succeeds
    try:
    - script:
        skipLogOutput: true
        env:
        - name: NAMESPACE
          value: ($namespace)
        content: kubectl create token chainsaw-test-sa -n ${NAMESPACE} --duration=31536001s >/dev/null
        check:
          ($error): ~
